_build/_log
### Starting build.
# Target: test.ml.depends, tags: { extension:ml, file:test.ml, ocaml, ocamldep, quiet }
ocamldep.opt -modules test.ml > test.ml.depends
# Target: test.cmo, tags: { byte, compile, extension:cmo, extension:ml, file:test.cmo, file:test.ml, implem, ocaml, quiet }
ocamlc.opt -c -o test.cmo test.ml
+ ocamlc.opt -c -o test.cmo test.ml
File "test.ml", line 1, characters 19-25:
1 | let subset_test0 = subset [] [1;2;3]
                       ^^^^^^
Error: Unbound value subset
Command exited with code 2.
# Compilation unsuccessful.
